--- a/css/career.css
+++ b/css/career.css
@@ -19,6 +19,9 @@ ul {
   list-style-type: none;
   padding-left: 0;
 }
+::selection {
+  user-select: none;
+}
 .super-wrapper {
   width: 100%;
   overflow-x: hidden;
